--- a/Japanese Script/readme
+++ b/Japanese Script/readme
@@ -1,2 +1,2 @@
 Here is the japanese script of the game.
-Scripts are ordered as they appear in the game files
+Scripts are ordered as they appear in the game files.
